add user on swagger
